--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "feed": "^4.2.2"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1"
+    "@11ty/eleventy": "^0.11.1",
+    "fs-extra": "^9.1.0"
   },
   "scripts": {
     "test": "cd test && npx @11ty/eleventy"
