--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "feed": "^4.2.2"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1",
+    "@11ty/eleventy": "github:11ty/eleventy#canary",
+    "del-cli": "^3.0.1",
+    "eleventy-plugin-wipdeveloper-tools": "^0.1.1",
     "fs-extra": "^9.1.0"
   },
   "scripts": {
-    "test": "cd test && npx @11ty/eleventy"
+    "test": "npm run test:clean && npm run test:run",
+    "test:run": "cd test && npx @11ty/eleventy",
+    "test:clean": "del-cli test/dist/ && del-cli test/src/feeds-plugin/"
   },
   "repository": {
     "type": "git",
