--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "test"
   },
   "dependencies": {
-    "feed": "^4.2.2"
+    "feed": "^4.2.2",
+    "fs-extra": "^9.1.0"
   },
   "devDependencies": {
     "@11ty/eleventy": "github:11ty/eleventy#canary",
     "del-cli": "^3.0.1",
-    "eleventy-plugin-wipdeveloper-tools": "^0.1.1",
-    "fs-extra": "^9.1.0"
+    "eleventy-plugin-wipdeveloper-tools": "^0.1.1"
   },
   "scripts": {
     "test": "npm run test:clean && npm run test:run",
