--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eleventy-plugin-feeds",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "An Eleventy plugin to generate feeds for reader apps.",
   "main": ".eleventy.js",
   "directories": {
@@ -13,8 +13,7 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "0.11.1",
-    "del-cli": "^3.0.1",
-    "eleventy-plugin-wipdeveloper-tools": "^0.1.1"
+    "del-cli": "^3.0.1"
   },
   "scripts": {
     "test": "npm run test:clean && npm run test:run",
