--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "eleventy-plugin-wipdeveloper-tools": "^0.1.1",
-    "feed": "^4.2.2",
-    "fs-extra": "^9.1.0"
+    "fs-extra": "^9.1.0",
+    "podcast": "^1.3.0"
   },
   "devDependencies": {
     "@11ty/eleventy": "0.11.1",
-    "del-cli": "^3.0.1"
+    "del-cli": "^3.0.1",
+    "podcast": "^1.3.0"
   },
   "scripts": {
     "test": "npm run test:clean && npm run test:run",
