--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "eleventy-plugin-feeds",
-  "version": "0.1.9",
+  "version": "1.0.0",
   "description": "An Eleventy plugin to generate feeds for reader apps.",
   "main": ".eleventy.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "eleventy-plugin-wipdeveloper-tools": "^0.1.1",
     "fs-extra": "^9.1.0",
     "podcast": "^1.3.0"
   },
   "devDependencies": {
     "@11ty/eleventy": "0.11.1",
     "del-cli": "^3.0.1",
-    "podcast": "^1.3.0"
+    "podcast": "^1.3.0",
+    "eleventy-plugin-wipdeveloper-tools": "^0.1.2"
   },
   "scripts": {
     "test": "npm run test:clean && npm run test:run",
